# concise-json-parsing-in-haskell

./: README.md  concise-json-parsing-in-haskell.cabal
src/: Main.hs  Main.lhs
src-ruby/: albums.json  main.rb
